--- a/TODO
+++ b/TODO
@@ -1,17 +1,18 @@
-- buddhist: Thai Buddhist calendar
-- chinese: Traditional Chinese calendar
-- coptic: Coptic calendar
-- dangi: Traditional Korean calendar
-- ethioaa: Ethiopic calendar, Amete Alem (epoch approx. 5493 B.C.E)
-- ethiopic: Ethiopic calendar, Amete Mihret (epoch approx, 8 C.E.)
-- hebrew: Traditional Hebrew calendar
-- indian: Indian calendar
-- islamic: Islamic calendar
-- islamic-umalqura: Islamic calendar, Umm al-Qura
-- islamic-tbla: Islamic calendar, tabular (intercalary years [2,5,7,10,13,16,18,21,24,26,29] - astronomical epoch)
-- islamic-civil: Islamic calendar, tabular (intercalary years [2,5,7,10,13,16,18,21,24,26,29] - civil epoch)
-- islamic-rgsa: Islamic calendar, Saudi Arabia sighting
-- japanese: Japanese Imperial calendar
-- persian: Persian calendar
-- roc: Civil (algorithmic) Arabic calendar
-
+- calendar-buddhist: Thai Buddhist calendar
+- calendar-chinese: Traditional Chinese calendar
+- calendar-coptic: Coptic calendar
+- calendar-dangi: Traditional Korean calendar
+- calendar-ethioaa: Ethiopic calendar, Amete Alem (epoch approx. 5493 B.C.E)
+- calendar-ethiopic: Ethiopic calendar, Amete Mihret (epoch approx, 8 C.E.)
+- calendar-hebrew: Traditional Hebrew calendar
+- calendar-indian: Indian calendar
+- calendar-islamic: Islamic calendar
+- calendar-islamic-umalqura: Islamic calendar, Umm al-Qura
+- calendar-islamic-tbla: Islamic calendar, tabular (intercalary years [2,5,7,10,13,16,18,21,24,26,29] - astronomical epoch)
+- calendar-islamic-civil: Islamic calendar, tabular (intercalary years [2,5,7,10,13,16,18,21,24,26,29] - civil epoch)
+- calendar-islamic-rgsa: Islamic calendar, Saudi Arabia sighting
+- calendar-japanese: Japanese Imperial calendar
+- calendar-persian: Persian calendar
+- calendar-roc: Civil (algorithmic) Arabic calendar
+- library: https://github.com/soroush/libcalendars
+- library: https://github.com/unicode-org/icu
